clusters/pre-prod/pre-prod-us-east-1/tenants/messaging/messaging-common/resources/redis-dev-sms-noncluster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-extra-sentinel-dev-sms-noncluster
  namespace: messaging
  labels:
    app: redis-extra-sentinel-dev-sms-noncluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-extra-sentinel-dev-sms-noncluster
  template:
    metadata:
      labels:
        app: redis-extra-sentinel-dev-sms-noncluster
    spec:
      tolerations:
      - key: ops.plivo.com/dedicated-for
        value: messaging-redis-sentinel-spot
      containers:
      - name: sentinel
        image: 857556598075.dkr.ecr.us-west-1.amazonaws.com/plivo/bitnami-redis/redis-sentinel-7.4.0:25.02.26.1480
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: sentinel
          containerPort: 26379
        readinessProbe:
          exec:
            command:
            - bash
            - '-lc'
            - /opt/bitnami/redis-sentinel/bin/redis-cli -p 26379 ping | grep PONG
          initialDelaySeconds: 5
          periodSeconds: 5
